# Ayanami-sTower

./: .csharpierrc.json  .editorconfig  .gitignore  .gitmodules  AGENTS.md  AyanamisTower.sln  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  InvictaDB.sln  README.md  StellaEcs.sln  StellaLang.sln  sl_quiz_database.sln  st_testing.sln
4x-modding-studio/: DatabaseViewer.cs  DatabaseViewer.cs.uid  FileSystem.cs  FileSystem.cs.uid  GraphXmlUtils.cs  GraphXmlUtils.cs.uid  New Game Project.csproj  New Game Project.sln  NodeGenerator.cs  NodeGenerator.cs.uid  NodeSearcher.gd  NodeSearcher.gd.uid  README.md  X4 Foundations Modding Guide.md  X4DatabaseManager.cs  X4DatabaseManager.cs.uid  XmlCodeEdit.cs  XmlCodeEdit.cs.uid  XmlSchemaInference.cs  XmlSchemaInference.cs.uid  XmlSyntaxHighlighter.cs  XmlSyntaxHighlighter.cs.uid  XmlWriter.cs  XmlWriter.cs.uid  action.gd  action.gd.uid  actions.gd  actions.gd.uid  actions.tscn  aiscripts.xsd  astro.config.mjs  camera_2d.gd  camera_2d.gd.uid  cluster.gd  cluster.gd.uid  cluster.tscn  common.xsd  condition_node.tscn  conditions.gd.uid  conditions.tscn  (+72 more)
AsyncDistributedSystems/: AsyncDistributedSystems.sln  Idea.md  README.md
AyanamiUtilities/: AyanamiUtilities.sln  README.md  SaveDataManager.cs
Ayanamis-Tower.MemoryExtensions/: AyanamisTower.MemoryExtensions.csproj  MemoryExtensions.cs  MemoryStack.cs
AyanamisTower.SFPM.Kotlin/: settings.gradle.kts
AyanamisTower.StellaEcs/: ComponentFactory.cs  ComponentStorage.cs  Entity.cs  IComponentStorage.cs  IEntityFunction.cs  IFilter.cs  ISystem.cs  IView.cs  IterationSafety.md  MultiView.cs  QueryBuilder.cs  QueryEnumerable.cs  RelationshipStorage.cs  SparsedSet.cs  View.cs  World.cs  WorldSerializer.cs
AyanamisTower.StellaEcs.Kotlin/: build.gradle.kts  settings.gradle.kts
Code Quality Notes/: README.txt  Red Flags.txt
CsFSRS/: FSRS.sln  LICENSE  README.md
Elixier-Notebooks/: Behavior.livemd  ConcurrencyBasics.livemd  Datatypes.livemd  Documentation.livemd  EctoLibrary.livemd  ElixirPolymorphism.livemd  Functions.livemd  Sigils.livemd
EmailStatusService/: EmailStatusService.cs  README.md
Explorations/: README.md
FSRSPythonCSharpBridge/: FSRSPythonCSharpBridge.sln  README.md
FlecsHotReloadExample/: FlecsHotReloadExample.sln  README.md
FluidHierarchicalTaskNetworkExtensionsFork/: README.md
FluidHierarchicalTaskNetworkFork/: README.md
GalaxyMapEditor/: konvaExample.html  main.html
InformationHidingAndECS/: InformationHidingAndECS.sln  readme.md
InvictaDB/: InvictaDB.sln  README.md
IronSchemeExamples/: IronSchemeExamples.sln  README.md
LBRD/: Class1.cs  LBRD.sln  README.md
Language-Stella/: Changes  META6.json  README.md  dist.ini
MakeYourOwnLisp/: MakeYourOwnLisp.sln  README.md
NanoRPCSolution/: NanoRPC.slnx  PROTOCOL.md
NihilEx/: NihilEx.sln
NihilEx.SDL/: AyanamisTower.NihilEx.SDLWrapper.csproj  README.md  Wrapper.cs
Notes/: ActorBasedProgramming.md  Error Handling.md  OnAI.md
PersonalWebsite/: .dockerignore  Dockerfile  FLASHCARD_REFACTORING_SUMMARY.md  SPACED_REPETITION_README.md  SYNC_IMPLEMENTATION.md  flake.nix  (+6 more)
cppgm/: CMakeLists.txt  README.md  cppgm_vector2.cc  cppgm_vector2.cpp  cppgm_vector2.h  cppgm_vector2Util.cc  cppgm_vector2Util.cpp  cppgm_vector2Util.h
learning/game_engine/comp4300/: Action.h  Animation.h  Assets.cc  Assets.h  CAnimation.h  CBoundingBox.h  CCollision.h  CGravity.h  CInput.h  CLifespan.h  CMakeLists.txt  CMakePresets.json  CScore.h  CShape.h  CState.h  CTransform.cc  CTransform.h  Component.h  Entity.cc  Entity.h  EntityManager.cc  EntityManager.h  Game.cc  Game.h  GameEngine.FWD.h  GameEngine.cc  GameEngine.h  Physics.cc  Physics.h  README.md  Scene.FWD.h  Scene.cc  Scene.h  Scene_Menu.cc  Scene_Menu.h  Scene_Play.h  TODO.md  Vector2D.cc  Vector2D.h  build.ninja  (+3 more)
patterns_implemented/FP/lambda/: CMakeLists.txt  main.cc
patterns_implemented/FP/map_transform/: CMakeLists.txt  README.md  main.cc  map_reduce.h
patterns_implemented/template/: BUILD.bazel  MODULE.bazel  README.md  main.cc  template.cc  template.h  templateTest.cc
stella_fuzzy_pattern_matcher/SFPM-C/: BREAKING_CHANGES.md  CMakeLists.txt  COMPLETION_SUMMARY.md  DEVELOPMENT.md  HOOKS_SUMMARY.md  HOOK_CHAINING_QUICKREF.md  HOOK_CHAINING_SUMMARY.md  HOT_RELOAD_IMPLEMENTATION_SUMMARY.md  LICENSE  NATIVE_RELOAD_IMPLEMENTATION_SUMMARY.md  NATIVE_RELOAD_QUICK_REF.md  QUICKSTART.md  README.md  README_HOOKS.md  README_HOOK_CHAINING.md  README_HOT_RELOAD.md  REMOVAL_OF_BACKWARD_COMPATIBILITY.md  SNAPSHOT_TESTS_QUICK_REFERENCE.md  SNAPSHOT_TEST_REPORT.md  SNAPSHOT_TEST_SUMMARY.md  TEST_ADDITION_SUMMARY.md  TEST_COVERAGE_REPORT.md
stella_fuzzy_pattern_matcher/SFPM-C/examples/: CACHING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NATIVE_HOT_RELOAD.md  README.md  README_CACHING.md  README_GAME_AI.md  README_INTERPRETER.md  README_TIERED.md  basic_example.c  demo_hot_patch.ps1  demo_native_hot_reload.ps1  demo_native_simple.ps1  hot_patch_tool.c  interpreter.img  interpreter_cached.c  interpreter_comparison.c  interpreter_game_ai.c  interpreter_hook_chaining.c  interpreter_hooks.c  interpreter_hot_reload.c  interpreter_native_reload.c  interpreter_tiered.c  math_ops.c
stella_fuzzy_pattern_matcher/SFPM-C/include/sfpm/: criteria.h  fact_source.h  matcher.h  persistence.h  rule.h  sfpm.h  snapshot.h
stella_fuzzy_pattern_matcher/SFPM-C/src/: criteria.c  fact_source.c  matcher.c  rule.c  snapshot.c
stella_fuzzy_pattern_matcher/SFPM-C/tests/: test_advanced.c  test_basic.c  test_hook_chaining.c  test_snapshot.c
stella_fuzzy_pattern_matcher/SFPM-CPP/: CMakeLists.txt  README.md
stella_fuzzy_pattern_matcher/SFPM-CPP/examples/: basic_example.cpp
stella_fuzzy_pattern_matcher/SFPM-CPP/include/sfpm/: Criteria.hpp  FactSource.hpp  Query.hpp  Rule.hpp  RuleMatcher.hpp  Version.hpp
stella_fuzzy_pattern_matcher/SFPM-CPP/tests/: test_basic.cpp  test_ported.cpp
stella_sqlite_vfs/: README.md  examples.py  main.py  pyproject.toml
stella_sqlite_vfs/lib/: __init__.py  vfs.py
stella_sqlite_vfs/tests/: benchmark_vfs.py  test_layered_vfs.py  test_vfs.py
(+3392 files in other folders)
